Supercluster/Cluster01/TestWebApp/Namespace.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: v1
kind: Namespace
metadata:
  name: testwebapp
  labels:
    name: testwebapp
    app: testwebapp
    owner: EliasDH
    environment: production
  annotations:
    description: This namespace is used for the testwebapp application.
    contact: info@eliasdh.com
---
