Supercluster/Cluster01/TestWebApp/Deployment.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testwebapp-deployment
  namespace: testwebapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testwebapp
  template:
    metadata:
      labels:
        app: testwebapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        volumeMounts:
        - name: testwebapp-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: testwebapp-volume
        configMap:
          name: testwebapp-configmap
---
