Supercluster/Cluster01/TestWebApp/Service.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
# kubectl apply -f Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-web-app-service
  namespace: test-web-app
  labels:
    app: test-web-app
spec:
  selector:
    app: test-web-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
---
