Supercluster/Cluster01/TestWebApp/Ingress.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: testwebapp
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: testwebapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testwebapp-service
                port:
                  number: 80
---
